--- a/week1_prepare_dataset.ipynb
+++ b/week1_prepare_dataset.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "import IPython\n",
     "def display(*dfs):\n",
-    "    for df in dfs:\n",
+    "    for adf in dfs:\n",
     "        IPython.display.display(df)"
    ]
   },
@@ -1347,7 +1347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
